--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "countries-service",
+  "name": "@ac-dev/countries-service",
   "author": "Alessandro Casazza",
   "version": "1.0.0",
   "description": "Get the World's countries",
