--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "semantic-release": "semantic-release",
     "publish:beta": ""
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "release": {
     "branches": [
       "+([0-9])?(.{+([0-9]),x}).x",
