feat: Add CJS version

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "description": "Get the World's countries",
   "repository": "https://github.com/Randagio13/countries-service.git",
   "license": "MIT",
-  "module": "lib/index.js",
-  "typings": "lib/index.d.ts",
+  "main": "lib/cjs/index.js",
+  "module": "lib/esm/index.js",
+  "typings": "lib/esm/index.d.ts",
   "keywords": [
     "world",
     "countries",
@@ -24,10 +25,11 @@
   "scripts": {
     "alias": "npx tsc-alias",
     "start": "tsc --watch",
-    "build": "tsc -b tsconfig.json --verbose --force && cp -R data lib",
-    "postbuild": "minimize-js lib && npm run minify-json",
-    "minify-json": "minify-json ./lib/data -w -s",
+    "build": "npm run lint && tsc -b tsconfig.json tsconfig.cjs.json --verbose --force && cp -R data lib",
+    "postbuild": "minimize-js lib -w -s -d && npm run minify-json",
+    "minify-json": "minify-json ./lib/data",
     "test": "jest",
+    "lint": "eslint src",
     "coverage": "jest --coverage",
     "prepare": "npm run build",
     "size": "size-limit",
@@ -95,10 +97,13 @@
     "@semantic-release/npm": "^9.0.0",
     "@semantic-release/release-notes-generator": "^10.0.3",
     "@types/jest": "^27.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
+    "eslint": "^8.10.0",
     "husky": "^7.0.4",
     "jest": "^27.4.7",
     "minify-json": "^1.0.0",
-    "minimize-js": "^1.2.0",
+    "minimize-js": "^1.3.0",
     "semantic-release": "^19.0.2",
     "tslib": "^2.3.1",
     "typescript": "^4.5.5"
